microservices/flask/flask-deployment.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: flask-app-v1
spec:
  replicas: 4
  minReadySeconds: 10
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      name: devops-flask
      labels:
        app: devops-flask
        env: dev
        tech: python
    spec:
      containers:
        - image: kannanc70/devops-flask
          name: devops-flask
          ports:
            - containerPort: 5000
              protocol: TCP
