microservices/flask/flask-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: devops-flask-pod
  labels:
    app: devops-flask
    env: dev
    tech: python
spec:
  containers:
    - image: kannanc70/devops-flask
      name: devops-flask
      ports:
        - containerPort: 5000
          protocol: TCP
