microservices/flask/kubernetes_output.yml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kc-cloud.com/application: k8s-test-app
  creationTimestamp: "2019-09-19T20:37:19Z"
  labels:
    app: devops-flask
    env: dev
    team: PMP
    tech: python
  name: devops-flask-pod
  namespace: default
  resourceVersion: "7605"
  selfLink: /api/v1/namespaces/default/pods/devops-flask-pod
  uid: 0b9da1c0-e980-4ec2-b5e3-333b0ec61567
spec:
  containers:
  - image: kannanc70/devops-flask
    imagePullPolicy: Always
    name: devops-flask
    ports:
    - containerPort: 5000
      protocol: TCP
    resources: {}
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: default-token-9jswv
      readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  nodeName: minikube
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - name: default-token-9jswv
    secret:
      defaultMode: 420
      secretName: default-token-9jswv
status:
  conditions:
  - lastProbeTime: null
    lastTransitionTime: "2019-09-19T20:37:19Z"
    status: "True"
    type: Initialized
  - lastProbeTime: null
    lastTransitionTime: "2019-09-19T20:37:21Z"
    status: "True"
    type: Ready
  - lastProbeTime: null
    lastTransitionTime: "2019-09-19T20:37:21Z"
    status: "True"
    type: ContainersReady
  - lastProbeTime: null
    lastTransitionTime: "2019-09-19T20:37:19Z"
    status: "True"
    type: PodScheduled
  containerStatuses:
  - containerID: docker://bccae571e95c329915a15730c70aa05d6c5d5e4260fae576a7bfd95c44c2de17
    image: kannanc70/devops-flask:latest
    imageID: docker-pullable://kannanc70/devops-flask@sha256:d331b8ff67226429afc1550effadca58d0e0eb9ee6c69701f6a551b07c2ac779
    lastState: {}
    name: devops-flask
    ready: true
    restartCount: 0
    state:
      running:
        startedAt: "2019-09-19T20:37:21Z"
  hostIP: 10.0.2.15
  phase: Running
  podIP: 172.17.0.2
  qosClass: BestEffort
  startTime: "2019-09-19T20:37:19Z"
