microservices/flask/flask-nodeport-service.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-nodeport-service
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 5000
      nodePort: 30001
  selector:
    app: devops-flask
