microservices/flask/flask-service.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
Spec:
  selector:
    app: devops-flask
  ports:
    - port: 80
      targetPort: 5000
