microservices/flask/flask-ingress-service.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: flask-ingress-service
spec:
  rules: 
    - host: kc.test.com
      http:
        paths:
          - path: /
            backend:
              serviceName: flask-nodeport-service
              servicePort: 80
